@@ -669,6 +669,7 @@ sub get_server($$) {
 		    "pzone_path,szone_path,hostname,hostmaster,comment," .
 		    "dhcp_flags,named_flags,masterserver,version," .
 		    "memstats_file,transfer_source,forward,dialup," .
+		    "named_include,dhcpd_include," .
 		    "multiple_cnames,rfc2308_type1,authnxdomain," .
 		    "df_port,df_max_delay,df_max_uupdates,df_mclt,df_split,".
 		    "df_loadbalmax,hostaddr,".
